# Code-Review-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  app.py  grader.py  implementation_plan.md  inference.py  manifest.py  openenv.yaml  pyproject.toml  requirements.txt  start-local.bat  start-local.sh  test_graders.py
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/routers/: analysis.py  insights.py  rl.py  webhooks.py
backend/services/: analysis_engine.py  cache_service.py  github_service.py  llm_service.py  rag_service.py  security_scanner.py  static_analyzer.py
backend/tests/: conftest.py  test_health.py  test_schemas.py  test_security_scanner.py  test_static_analyzer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
infrastructure/: docker-compose.yml  nginx.conf  prometheus.yml
infrastructure/grafana/: dashboard.json  dashboards.yml
openenv-code-review/: .env.example  Dockerfile  README.md  agent.py  app.py  diff_parser.py  environment.py  grader.py  requirements.txt  reward.py  schemas.py
openenv-code-review/tasks/: __init__.py  task_001_null_check.json  task_002_sql_inject.json  (+3 more)
openenv_code_review/: .env.example  README.md  agent.py  diff_parser.py  dqn_agent.py  environment.py  experience_buffer.py  fix_tasks.py  grader.py  inference.py  read_stats.py  reward.py  schemas.py  state_encoder.py  training_loop.py  validate.py
server/: app.py
workers/: Dockerfile  celery_app.py  tasks.py
(+45 files in other folders)
